--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<button type="button" id="button-scissors">Nożyce</button>
 		</div>
 		<div id="messages"></div>
+		<div>I am grumpy</div>
 	</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
