--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 	<div class="container">
+		<h1 class="noClass">Yo!</h1>
 		<div id="buttons">
 			<button type="button" id="button-rock">Kamień</button>
 			<button type="button" id="button-paper">Papier</button>
