--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		</div>
 		<div id="messages"></div>
 	</div>
+	<div>Potions!!!!!</div>
 	<script src="js/functions.js"></script>
 	<script src="js/script.js"></script>
 </body>
