Class fat added to body

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Kamień, papier, nożyce</title>
 	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="fat">
 	<div class="container">
 		<h1 class="noClass">Yo!</h1>
 		<div id="buttons">
